# datastructures-algorithms

./: .clang-format  .gdb_history  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.c
.cache/clangd/index/: include.h.4A9C87B2FDD39A0B.idx  linklist.c.50062F1481B4EEBC.idx  linklist.h.982E3F53F736D6EC.idx  main.c.D5FAC37CC07A2CD8.idx  sqlist.c.3F501C54DB0415F6.idx  sqlist.h.20A152DDD6564725.idx  test.c.231DA333D23890E5.idx
algorithms/: CMakeLists.txt  doubleptr.c  polish.cpp  stackapp.c
algorithms/array/: dualptr.cpp
algorithms/linkedlist/: doubleptr.c
algorithms/stack/: polish.cpp  stackapp.cpp
algorithms/tree/: binarytree.cpp  unionfind.cpp
apps/: CMakeLists.txt  main.c
header/: CMakeLists.txt
header/include/head/: include.h
ics/su20-proj1-starter/: Makefile  hashtable.c  hashtable.h  philspel.c
ics/su20-proj1-starter/hash/: dict.c  test_dict.c
include/: CMakeLists.txt
include/forehead/: forehead.h  include.h
include/graph/: graph.h
include/list/: linklist.h  sqlist.h
include/queue/: linkqueue.h  sqqueue.h
include/stack/: sqstack.h
include/tree/: bitree.h  tree.h
src/: CMakeLists.txt
src/graph/: graph.c
src/list/: linklist.c  sqlist.c
src/queue/: linkqueue.c  sqqueue.c
src/stack/: sqstack.c
src/tree/: bitree.c  tree.c
tests/: CMakeLists.txt  bitree_test.c  graph_test.c  linklist_test.c  queue_test.c  sqlist_test.c  sqstack_test.c  test.c
