add_executable(sqlist sqlist_test.c)
add_executable(linklist linklist_test.c)
add_executable(sqstack sqstack_test.c)
add_executable(queue queue_test.c)
add_executable(bitree bitree_test.c)
add_executable(graph graph_test.c)

target_link_libraries(sqlist PUBLIC DSA)
target_link_libraries(linklist PUBLIC DSA)
target_link_libraries(sqstack PUBLIC DSA)
target_link_libraries(queue PUBLIC DSA)
target_link_libraries(bitree PUBLIC DSA)
target_link_libraries(graph PUBLIC DSA)
